RESOLVED FIXED204607
Attempting to enable more than one FuzzerAgent should result in an error
https://bugs.webkit.org/show_bug.cgi?id=204607
Summary Attempting to enable more than one FuzzerAgent should result in an error
Tuomas Karkkainen
Reported 2019-11-26 02:49:24 PST
Attempting to enable more than one FuzzerAgent should result in an error. Currently the options enabling FuzzerAgents are evaluated in order and any FuzzerAgents enabled after the first one are silently ignored.
Attachments
proposed patch (1.77 KB, patch)
2019-11-26 02:53 PST, Tuomas Karkkainen
no flags
Tuomas Karkkainen
Comment 1 2019-11-26 02:53:31 PST
Created attachment 384342 [details] proposed patch
WebKit Commit Bot
Comment 2 2019-11-26 04:21:20 PST
Comment on attachment 384342 [details] proposed patch Clearing flags on attachment: 384342 Committed r252885: <https://trac.webkit.org/changeset/252885>
WebKit Commit Bot
Comment 3 2019-11-26 04:21:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-26 04:22:19 PST
Note You need to log in before you can comment on or make changes to this bug.