Attempting to enable more than one FuzzerAgent should result in an error https://bugs.webkit.org/show_bug.cgi?id=204607

Patch by Tuomas Karkkainen <tuomas.webkit@apple.com> on 2019-11-26
Reviewed by Antti Koivisto.

* runtime/VM.cpp:
* runtime/VM.h:

Canonical link: https://commits.webkit.org/217860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252885 268f45cc-cd09-0410-ab3c-d52691b4dbfc